--- a/reference-new.adoc
+++ b/reference-new.adoc
@@ -17,15 +17,15 @@ Cloud Volumes ONTAP 9.15.1 includes new enhancements.
 
 Additional features and enhancements are also introduced in the latest versions of BlueXP. See the https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/whats-new.html[BlueXP Release Notes^] for details.
 
-//== 9.15.1 P10 ( 2025)
-//The 9.15.1 P10 patch is now available for Cloud Volumes ONTAP for all cloud providers. BlueXP will prompt you to upgrade your existing systems to this patch release.
+== 9.15.1 P10 (29 May 2025)
+The 9.15.1 P10 patch is now available for Cloud Volumes ONTAP for all cloud providers. BlueXP will prompt you to upgrade your existing systems to this patch release.
 
-//link:https://mysupport.netapp.com/site/products/all/details/cloud-volumes-ontap/downloads-tab/download/62632/9.15.1P10[View the list of bugs fixed in the P10 patch^] (NetApp Support Site login required).
+link:https://mysupport.netapp.com/site/products/all/details/cloud-volumes-ontap/downloads-tab/download/62632/9.15.1P10[View the list of bugs fixed in the P10 patch^] (NetApp Support Site login required).
 
-//== 9.15.1 P9 ( 2025)
-//The 9.15.1 P9 patch is now available for Cloud Volumes ONTAP for all cloud providers. BlueXP will prompt you to upgrade your existing systems to this patch release.
+== 9.15.1 P9 (29 May 2025)
+The 9.15.1 P9 patch is now available for Cloud Volumes ONTAP for all cloud providers. BlueXP will prompt you to upgrade your existing systems to this patch release.
 
-//link:https://mysupport.netapp.com/site/products/all/details/cloud-volumes-ontap/downloads-tab/download/62632/9.15.1P9[View the list of bugs fixed in the P9 patch^] (NetApp Support Site login required).
+link:https://mysupport.netapp.com/site/products/all/details/cloud-volumes-ontap/downloads-tab/download/62632/9.15.1P9[View the list of bugs fixed in the P9 patch^] (NetApp Support Site login required).
 
 == 9.15.1 P8 (17 April 2025)
 The 9.15.1 P8 patch is now available for Cloud Volumes ONTAP for all cloud providers. BlueXP will prompt you to upgrade your existing systems to this patch release.
