--- a/reference-new.adoc
+++ b/reference-new.adoc
@@ -17,6 +17,11 @@ Cloud Volumes ONTAP 9.15.1 includes new enhancements.
 
 Additional features and enhancements are also introduced in the latest versions of BlueXP. See the https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/whats-new.html[BlueXP Release Notes^] for details.
 
+== 9.15.1 P11 (4 Juy 2025)
+The 9.15.1 P11 patch is now available for Cloud Volumes ONTAP for all cloud providers. BlueXP will prompt you to upgrade your existing systems to this patch release.
+
+link:https://mysupport.netapp.com/site/products/all/details/cloud-volumes-ontap/downloads-tab/download/62632/9.15.1P11[View the list of bugs fixed in the P11 patch^] (NetApp Support Site login required).
+
 == 9.15.1 P10 (29 May 2025)
 The 9.15.1 P10 patch is now available for Cloud Volumes ONTAP for all cloud providers. BlueXP will prompt you to upgrade your existing systems to this patch release.
 
