--- a/reference-new.adoc
+++ b/reference-new.adoc
@@ -17,13 +17,13 @@ Cloud Volumes ONTAP 9.15.1 includes new enhancements.
 
 Additional features and enhancements are also introduced in the latest versions of BlueXP. See the https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/whats-new.html[BlueXP Release Notes^] for details.
 
-== 9.15.1 P14 (dd month 2025)
-The 9.15.1 P14 patch is now available for Cloud Volumes ONTAP for all cloud providers. BlueXP will prompt you to upgrade your existing systems to this patch release.
+== 9.15.1 P14 (9 October 2025)
+The 9.15.1 P14 patch is now available for Cloud Volumes ONTAP for all cloud providers. NetApp Console will prompt you to upgrade your existing systems to this patch release.
 
 link:https://mysupport.netapp.com/site/products/all/details/cloud-volumes-ontap/downloads-tab/download/62632/9.15.1P14[View the list of bugs fixed in the P14 patch^] (NetApp Support Site login required).
 
-== 9.15.1 P13 (dd month 2025)
-The 9.15.1 P13 patch is now available for Cloud Volumes ONTAP for all cloud providers. BlueXP will prompt you to upgrade your existing systems to this patch release.
+== 9.15.1 P13 (9 October 2025)
+The 9.15.1 P13 patch is now available for Cloud Volumes ONTAP for all cloud providers. NetApp Console will prompt you to upgrade your existing systems to this patch release.
 
 link:https://mysupport.netapp.com/site/products/all/details/cloud-volumes-ontap/downloads-tab/download/62632/9.15.1P13[View the list of bugs fixed in the P13 patch^] (NetApp Support Site login required).
 
